--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/elliptic": "^6.4.14",
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.6",
-    "@types/pubnub": "^7.0.0"
+    "@types/pubnub": "^7.0.0",
+    "ts-node": "^10.9.1"
   }
 }
