--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/body-parser": "^1.19.2",
     "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "elliptic": "^6.5.4",
     "express": "^4.18.1",
@@ -25,6 +25,8 @@
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.6",
     "@types/pubnub": "^7.0.0",
+    "@types/body-parser": "^1.19.2",
+    "@types/cors": "^2.8.12",
     "ts-node": "^10.9.1"
   }
 }
