--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "hex-to-binary": "^1.0.1",
     "pubnub": "^7.2.0",
     "redis": "^2.8.0",
+    "socket.io": "^4.5.1",
+    "socket.io-client": "^4.5.1",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
