--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node main",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -21,15 +21,18 @@
     "redis": "^2.8.0",
     "socket.io": "^4.5.1",
     "socket.io-client": "^4.5.1",
+    "typescript": "^4.8.3",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
-    "@types/elliptic": "^6.4.14",
-    "@types/express": "^4.17.13",
-    "@types/node": "^18.0.6",
-    "@types/pubnub": "^7.0.0",
     "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.12",
+    "@types/elliptic": "^6.4.14",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^29.0.0",
+    "@types/node": "^18.0.6",
+    "@types/pubnub": "^7.0.0",
+    "ts-jest": "^26.4.4",
     "ts-node": "^10.9.1"
   }
 }
