before switch to p2p v2.0

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node main & npm start --prefix ./src/frontend",
+    "backend": "ts-node main",
     "test": "jest"
   },
   "author": "",
