--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,8 @@ miner1:
     image: miner
     container_name: miner1
     environment:
-      IS_ROOT_NODE: "true"
+      P2P_ROOT: 10.241.107.215:9000
+      ROOT_NODE_URL: http://10.241.107.215:3000
       REACT_APP_BACKEND_PORT: 3000
     volumes:
        - ./data/miner1:/data/miner1
